--- a/_includes/partials/ciphers/rotate.liquid
+++ b/_includes/partials/ciphers/rotate.liquid
@@ -1,7 +1,16 @@
 <section id="rotate" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="rotText">Rotation cipher</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#rotCollapse" role="button" 
+                aria-expanded="true" aria-controls="rotCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Rotation cipher
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 A very simple method of encription, rotaion ciphers - also known as substution of shift ciphers - replace letters with a different letter at another place in the alphabet. The most common is the Caeser cipher or Rot 13 cipher, more information is available on the <a href="https://en.wikipedia.org/wiki/Caesar_cipher" class="text-convrtr">Caesar_cipher</a> Wikipedia page. 
@@ -97,7 +106,7 @@
                 </button>
             </li>
         </ul>
-        <div class="row justify-content-center">
+        <div class="collapse show" id="rotCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">ROT Cipher</span>
