--- a/_includes/partials/ciphers/hash.liquid
+++ b/_includes/partials/ciphers/hash.liquid
@@ -1,13 +1,22 @@
 <section id="hash" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="hashText">Hash</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#hashCollapse" role="button" 
+                aria-expanded="false" aria-controls="hashCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Hash
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 Generate various hash values for a given text string. More information about hashes and the libraries used here, can be found on the <a href="https://cryptojs.gitbook.io/docs/" class="text-convrtr"">CryptoJS Gitbook</a> documentation site.
             </p>
         </div>
-        <div class="row justify-content-center">
+        <div class="collapse" id="hashCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Hash text</span>
