--- a/_includes/partials/ciphers/vigenere.liquid
+++ b/_includes/partials/ciphers/vigenere.liquid
@@ -1,7 +1,16 @@
 <section id="vigenere" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="vigenereText">Vigenère cipher</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#vigenereCollapse" role="button" 
+                aria-expanded="false" aria-controls="vigenereCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Vigenère cipher
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 One of the most well known cipher methods. Each letter of the message is shifted by a corresponding character of the key, running out of characters in the key will loop back to the beginning. For example: <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">SENTENCE</code> encrypted with a key of <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">TEST</code> would shift like: 
@@ -19,7 +28,8 @@
                 </code>
                 - for the next letters, the key would loop back and start from the first T in TEST again. There is more information available on the <a href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher" class="text-convrtr">Vigenère cipher</a> Wikipedia page. 
             </p>
-        <div class="row justify-content-center">
+        </div>
+        <div class="collapse" id="vigenereCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Vigenère cipher</span>
