--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -1,13 +1,22 @@
 <section id="reverseHex" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="flipText">Reverse hex</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#reverseHexCollapse" role="button" 
+                aria-expanded="false" aria-controls="reverseHexCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Reverse hex
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 Unlike reversing the entire string, this reverses each individual hex string. <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">74 65 73 74</code> [test] becomes <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">47 56 37 47</code>.
             </p>
         </div>
-        <div class="row justify-content-center">
+        <div class="collapse" id="reverseHexCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Reverse hex</span>
