--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -1,14 +1,24 @@
 <section id="shift" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="shiftText">Shift hex</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#shiftHexCollapse" role="button" 
+                aria-expanded="true" aria-controls="shiftHexCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Shift hex
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 Lazy shift a hexadecimal string up or down: <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">54 65 73 74</code> [test] becomes <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">55 66 74 75</code> [uftu] when shifted 1 to the right (+1) or <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">53 64 72 73</code> [Sdrs] when shifted 1 to the left. 
                 Supports any delimiter is available in the delimiter dropdown, the default is always a space. 
             </p>
-        <div class="row justify-content-center">
-            <div class="col"
+        </div>
+        <div class="collapse show" id="shiftHexCollapse">
+            <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Shift hex string</span>
                     <div class="card-body text-center">
