--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -1,13 +1,22 @@
 <section id="tools" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <label class="display-6" for="toolsTextarea">Text tools</label>
+            <div class="d-flex justify-content-between section-toggle"
+                data-bs-toggle="collapse" href="#toolsCollapse" role="button" 
+                aria-expanded="false" aria-controls="toolsCollapse">
+                <h2 class="display-6 w-100 d-flex m-0">
+                    Tools
+                </h2>
+                <span class="text-light px-1 border bg-dark border-dark rounded align-self-end">
+                    <i class="bi bi-arrow-up lh-base"></i>
+                </span>
+            </div>
             <hr>
             <p class="text-dark px-2">
                 Various operations that can be performed on any kind of text string. By default all changes are based on what you enter into the textarea. By selecting "Chain commands" this shifts to the results section at the bottom, you can then perform actions in succession. E.g. Strip spaces from a string, then select Remove all numbers and both will be performed. 
             </p>
         </div>
-        <div class="row justify-content-center">
+        <div class="collapse" id="toolsCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Text tools</span>
