--- a/_includes/partials/home/home.liquid
+++ b/_includes/partials/home/home.liquid
@@ -4,7 +4,7 @@
             <h1 class="display-6">Encoding and Decoding</h1>
             <hr>
             <p class="text-dark px-2">
-                Convrtr is a simple JavaScript based tool to quickly convert text between different formats. A description of each decoder and link to more information is available using the info button in the top-right of each decoder. You can also copy the contents on individual decoders and download the contents to a text file.
+                Convrtr is a simple JavaScript based tool to quickly convert text between different formats and to help create or solve data driven puzzles and ciphers.
             </p>
             <p class="text-dark px-2 m-0">
                 Please note that these tools aren't optimized for large amounts of data, processing can slow down or run into problems once you reach above <code class="d-inline-flex px-2 text-dark bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">150,000</code> characters. A cap of 1 million characters is currently in place.
