Simplifying alphabet list for rotation

--- a/_includes/partials/ciphers/rotate.liquid
+++ b/_includes/partials/ciphers/rotate.liquid
@@ -16,96 +16,35 @@
                 A very simple method of encription, rotaion ciphers - also known as substution of shift ciphers - replace letters with a different letter at another place in the alphabet. The most common is the Caeser cipher or Rot 13 cipher, more information is available on the <a href="https://en.wikipedia.org/wiki/Caesar_cipher" class="text-convrtr">Caesar_cipher</a> Wikipedia page. 
             </p>
         </div>
+
         <ul class="pagination justify-content-center flex-wrap" id="pagination">
+        {% for char in alpha %}
+            {% if forloop.first %}
             <li class="page-item">
-                <button type="button" class="page-link" id="rotPrev" aria-label="Previous" data-bs-toggle="tooltip" data-bs-placement="top" title="Previous">
+                <button type="button" class="page-link" id="rotPrev" aria-label="Previous" 
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </button>
             </li>
+            {% endif %}
             <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot1" aria-label="A: Rot 1" data-rot-number="1" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 1">a<span class="visually-hidden">: rot 1</span></button>
+                <button type="button" class="page-link rot-link" id="rot{{ forloop.index }}" 
+                    aria-label="{{ char.letter }}: Rot {{ forloop.index }}" data-rot-number="{{ forloop.index }}" 
+                    data-bs-toggle="tooltip" data-bs-placement="top" title="Rot {{ forloop.index }}">
+                        {{ char.letter | downcase }}<span class="visually-hidden">: rot {{ forloop.index }}</span>
+                </button>
             </li>
+            {% if forloop.last %}
             <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot2" aria-label="B: Rot 2" data-rot-number="2" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 2">b<span class="visually-hidden">: rot 2</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot3" aria-label="C: Rot 3" data-rot-number="3" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 3">c<span class="visually-hidden">: rot 3</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot4" aria-label="D: Rot 4" data-rot-number="4" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 4">d<span class="visually-hidden">: rot 4</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot5" aria-label="E: Rot 5" data-rot-number="5" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 5">e<span class="visually-hidden">: rot 5</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot6" aria-label="F: Rot 6" data-rot-number="6" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 6">f<span class="visually-hidden">: rot 6</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot7" aria-label="G: Rot 7" data-rot-number="7" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 7">g<span class="visually-hidden">: rot 7</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot8" aria-label="H: Rot 8" data-rot-number="8" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 8">h<span class="visually-hidden">: rot 8</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot9" aria-label="I: Rot 9" data-rot-number="9" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 9">i<span class="visually-hidden">: rot 9</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot10" aria-label="J: Rot 10" data-rot-number="10" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 10">j<span class="visually-hidden">: rot 10</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot11" aria-label="K: Rot 11" data-rot-number="11" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 11">k<span class="visually-hidden">: rot 11</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot12" aria-label="L: Rot 12" data-rot-number="12" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 12">l<span class="visually-hidden">: rot 12</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot13" aria-label="M: Rot 13" data-rot-number="13" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 13">m<span class="visually-hidden">: rot 13</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot14" aria-label="N: Rot 14" data-rot-number="14" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 14">n<span class="visually-hidden">: rot 14</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot15" aria-label="O: Rot 15" data-rot-number="15" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 15">o<span class="visually-hidden">: rot 15</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot16" aria-label="P: Rot 16" data-rot-number="16" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 16">p<span class="visually-hidden">: rot 16</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot17" aria-label="Q: Rot 17" data-rot-number="17" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 17">q<span class="visually-hidden">: rot 17</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot18" aria-label="R: Rot 18" data-rot-number="18" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 18">r<span class="visually-hidden">: rot 18</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot19" aria-label="S: Rot 19" data-rot-number="19" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 19">s<span class="visually-hidden">: rot 19</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot20" aria-label="T: Rot 20" data-rot-number="20" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 20">t<span class="visually-hidden">: rot 20</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot21" aria-label="U: Rot 21" data-rot-number="21" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 21">u<span class="visually-hidden">: rot 21</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot22" aria-label="V: Rot 22" data-rot-number="22" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 22">v<span class="visually-hidden">: rot 22</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot23" aria-label="W: Rot 23" data-rot-number="23" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 23">w<span class="visually-hidden">: rot 23</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot24" aria-label="X: Rot 24" data-rot-number="24" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 24">x<span class="visually-hidden">: rot 24</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot25" aria-label="Y: Rot 25" data-rot-number="25" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 25">y<span class="visually-hidden">: rot 25</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link rot-link" id="rot26" aria-label="Z: Rot 26" data-rot-number="26" data-bs-toggle="tooltip" data-bs-placement="top" title="Rot 26">z<span class="visually-hidden">: rot 26</span></button>
-            </li>
-            <li class="page-item">
-                <button type="button" class="page-link" id="rotNext" aria-label="Next" data-bs-toggle="tooltip" data-bs-placement="top" title="Next">
+                <button type="button" class="page-link" id="rotNext" aria-label="Next" 
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </button>
             </li>
+            {% endif %}
+        {% endfor %}
         </ul>
+
         <div class="collapse show" id="rotCollapse">
             <div class="col">
                 <div class="card">
