Migrate navigation to liquid and json
Will make it easier to adjust the nav in future and quickly add new items

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -10,7 +10,7 @@
     <body id="IOOBI9O4IEIEOIO4O4IB" 
           {% if page-id == "fourohfour" %}class="d-flex flex-column h-100 top-0"{% endif %}>
 
-        {% include "layout/nav" %}
+        {% include "layout/header" %}
 
         {{ content }}
 
