Fix typo in Flip

--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -13,7 +13,7 @@
             </div>
             <hr>
             <p class="text-dark px-2">
-                Fip text upside down - allows you to turn this into ʇɥıs
+                Flip text upside down - allows you to turn this into ʇɥıs
             </p>
         </div>
         <div id="flipCollapse" class="collapse">
