Production / local settings
Swap out some things like URLs when working locally
Denote dev environment by the "-dev" flag in the footer and additional icon next to the site name in the header
Version bump, no release

--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -14,8 +14,8 @@
             </p>
         </div>
         <div class="p-4 pt-2">
-            <abbr title="Release version: v{{ pkg.version }}" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
-                <small>v{{ pkg.version }}</small>
+            <abbr title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
+                <small>v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}</small>
             </abbr>
         </div>
     </div>
