--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -2,7 +2,7 @@
 {% if page-id == "fourohfour" %}
 <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
     <li class="nav-item">
-        <a class="nav-link active" href="{{ pkg.homepage }}">Home</a>
+        <a class="nav-link active" href="{% if data.environment == 'development' %}http://localhost:8088/{% else %}{{ pkg.homepage }}{% endif %}">Home</a>
     </li>
 </ul>
 {% else %}
