Fix forgotten replacement

--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -36,7 +36,7 @@
         <div class="collapse" id="subCollapse">
             <div class="col">
                 <div class="card">
-                    <span class="card-label visually-hidden">Vigenère cipher</span>
+                    <span class="card-label visually-hidden">Substitution cipher</span>
                     <div class="card-body text-center">
                         <textarea placeholder="Example: TEST SENTENCE → WORD [key] → PSJW OSEWABTH" title="Vigenere string" rows="6" id="subText" class="form-control sub-cipher"></textarea>
                     </div>
