--- a/_includes/partials/ciphers/sub.liquid
+++ b/_includes/partials/ciphers/sub.liquid
@@ -48,7 +48,7 @@
                                         <label class="input-group-text" id="substitution-group" for="subKey">Key</label>
                                         <input type="text" class="form-control" id="subKey" title="Substitution cipher key">
                                         <button class="btn btn-outline-convrtr" type="button" id="subEncrypt">Encrypt</button>
-                                        <button class="btn btn-outline-convrtr" type="button" id="subDecrypt" title="Decryption is currently unavailable" disabled>Decrypt</button>
+                                        {% comment %}<button class="btn btn-outline-convrtr" type="button" id="subDecrypt" title="Decryption is currently unavailable">Decrypt</button>{% endcomment %}
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill justify-content-end">
