--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -38,6 +38,7 @@
                                             <option value="removenumbers">Remove all numbers</option>
                                             <option value="removeletters">Remove all letters</option>
                                             <option value="specialcharsonly">Special characters only</option>
+                                            <option value="alphabet">Letters to alphabet number</option>
                                             <option value="urlencode">URL Encode</option>
                                             <option value="urldecode">URL Decode</option>
                                         </select>
